Still testing something with the Linux shutdown script...